--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 https://github.com/explosion/spacy-models/releases/download/de_core_news_lg-3.2.0/de_core_news_lg-3.2.0.tar.gz#egg=de_core_news_lg
 spacy==3.2.0
-spacy-legacy==3.0.9
+//spacy-legacy==3.0.9
 spacy-loggers==1.0.2
 absl-py==1.0.0
 alabaster==0.7.12
